@@ -37,6 +37,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `logistics`: automatically mark and route items or animals that come to monitored stockpiles. options are toggleable on an overlay that comes up when you have a stockpile selected.
 
 ## Fixes
+- `buildingplan`: don't include artifacts when max quality is masterful
 - `dig-now`: clear item occupancy flags for channeled tiles that had items on them
 - `RemoteFortressReader`: fix a crash with engravings with undefined images
 
